--- a/foundry.toml
+++ b/foundry.toml
@@ -1,11 +1,13 @@
 [profile.default]
-src = "src"
-out = "out"
-libs = ["lib"]
-ffi = true
-fs_permissions = [{ access = "read-write", path = ".forge-snapshots/"}]
-solc_version = "0.8.26"
-evm_version = "cancun"
+  bytecode_hash = "none"
+  evm_version = "cancun"
+  ffi = true
+  fs_permissions = [{ access = "read-write", path = ".forge-snapshots/" }]
+  libs = ["lib"]
+  optimizer_runs = 44444444
+  out = "out"
+  solc_version = "0.8.26"
+  src = "src"
 
 
-# See more config options https://github.com/foundry-rs/foundry/tree/master/config
+  # See more config options https://github.com/foundry-rs/foundry/tree/master/config
